--- a/contact.html
+++ b/contact.html
@@ -103,8 +103,8 @@
 
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                   <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item dropdown active">
-                      <a href="index.html" class="nav-link active" data-toggle="dropdown">Anasayfa</a>
+                    <li class="nav-item dropdown">
+                      <a href="index.html" class="nav-link" data-toggle="dropdown">Anasayfa</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Şirketimiz <i
@@ -142,7 +142,7 @@
                         <li><a href="news-single.html">News Single</a></li>
                       </ul>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">İletişim</a></li>
+                    <li class="nav-item active"><a class="nav-link active" href="contact.html">İletişim</a></li>
                   </ul>
                 </div>
               </nav>
