--- a/services.html
+++ b/services.html
@@ -103,8 +103,8 @@
 
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                   <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item dropdown active">
-                      <a href="index.html" class="nav-link active" data-toggle="dropdown">Anasayfa</a>
+                    <li class="nav-item dropdown">
+                      <a href="index.html" class="nav-link" data-toggle="dropdown">Anasayfa</a>
                     </li>
                     <li class="nav-item dropdown">
                       <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Şirketimiz <i
@@ -125,8 +125,8 @@
                         <li><a href="projects-single.html">Proje Detay Sayfası</a></li>
                       </ul>
                     </li>
-                    <li class="nav-item dropdown">
-                      <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Hizmetlerimiz <i
+                    <li class="nav-item dropdown active">
+                      <a href="#" class="nav-link active dropdown-toggle" data-toggle="dropdown">Hizmetlerimiz <i
                           class="fa fa-angle-down"></i></a>
                       <ul class="dropdown-menu" role="menu">
                         <li><a href="services.html">Hizmetlerimiz</a></li>
