--- a/testimonials.html
+++ b/testimonials.html
@@ -103,11 +103,11 @@
 
                 <div id="navbar-collapse" class="collapse navbar-collapse">
                   <ul class="nav navbar-nav mr-auto">
-                    <li class="nav-item dropdown active">
-                      <a href="index.html" class="nav-link active" data-toggle="dropdown">Anasayfa</a>
-                    </li>
                     <li class="nav-item dropdown">
-                      <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Şirketimiz <i
+                      <a href="index.html" class="nav-link" data-toggle="dropdown">Anasayfa</a>
+                    </li>
+                    <li class="nav-item dropdown active">
+                      <a href="#" class="nav-link active dropdown-toggle" data-toggle="dropdown">Şirketimiz <i
                           class="fa fa-angle-down"></i></a>
                       <ul class="dropdown-menu" role="menu">
                         <li><a href="about.html">Hakkımızda</a></li>
