--- a/about.html
+++ b/about.html
@@ -157,12 +157,11 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="banner-heading">
-                <h1 class="banner-title">About</h1>
+                <h1 class="banner-title">Hakkımızda</h1>
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb justify-content-center">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">company</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">About Us</li>
+                    <li class="breadcrumb-item"><a href="index.html">Anasayfa</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Hakkımızda</li>
                   </ol>
                 </nav>
               </div>
@@ -175,7 +174,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <h3 class="column-title">Who We Are</h3>
+            <h3 class="column-title">Mecra Proje</h3>
             <p>when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible
               vermin.</p>
             <blockquote>
@@ -229,7 +228,7 @@
               </div>
               <div class="ts-facts-content">
                 <h2 class="ts-facts-num"><span class="counterUp" data-count="1789">0</span></h2>
-                <h3 class="ts-facts-title">Total Projects</h3>
+                <h3 class="ts-facts-title">Toplam Proje</h3>
               </div>
             </div>
             <div class="col-md-3 col-sm-6 ts-facts mt-5 mt-sm-0">
@@ -256,7 +255,7 @@
               </div>
               <div class="ts-facts-content">
                 <h2 class="ts-facts-num"><span class="counterUp" data-count="44">0</span></h2>
-                <h3 class="ts-facts-title">Countries Experience</h3>
+                <h3 class="ts-facts-title">Hizmet Verdiğimiz Ülkeler</h3>
               </div>
             </div>
           </div>
@@ -267,8 +266,8 @@
       <div class="container">
         <div class="row text-center">
           <div class="col-lg-12">
-            <h2 class="section-title">Quality Service</h2>
-            <h3 class="section-sub-title">Professional Team</h3>
+            <h2 class="section-title">Kaliteli Hizmet</h2>
+            <h3 class="section-sub-title">Profesyonel Takım</h3>
           </div>
         </div>
         <div class="row">
@@ -280,8 +279,8 @@
                     <img loading="lazy" class="w-100" src="images/team/team1.jpg" alt="team-img">
                   </div>
                   <div class="ts-team-content">
-                    <h3 class="ts-name">Nats Stenman</h3>
-                    <p class="ts-designation">Chief Operating Officer</p>
+                    <h3 class="ts-name">Mehmet Şahin</h3>
+                    <p class="ts-designation">Mimar</p>
                     <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
                     <div class="team-social-icons">
                       <a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -298,8 +297,8 @@
                     <img loading="lazy" class="w-100" src="images/team/team2.jpg" alt="team-img">
                   </div>
                   <div class="ts-team-content">
-                    <h3 class="ts-name">Angela Lyouer</h3>
-                    <p class="ts-designation">Innovation Officer</p>
+                    <h3 class="ts-name">İbrahim Tarık Şen</h3>
+                    <p class="ts-designation">İnşaat Mühendisi</p>
                     <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
                     <div class="team-social-icons">
                       <a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -315,63 +314,10 @@
                     <img loading="lazy" class="w-100" src="images/team/team3.jpg" alt="team-img">
                   </div>
                   <div class="ts-team-content">
-                    <h3 class="ts-name">Mark Conter</h3>
-                    <p class="ts-designation">Safety Officer</p>
+                    <h3 class="ts-name">Mustafa Abay</h3>
+                    <p class="ts-designation">Elektrik Elektronik Mühendisi</p>
                     <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
                     <div class="team-social-icons">
-                      <a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
-                      <a target="_blank" href="#"><i class="fab fa-google-plus"></i></a>
-                      <a target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="ts-team-wrapper">
-                  <div class="team-img-wrapper">
-                    <img loading="lazy" class="w-100" src="images/team/team4.jpg" alt="team-img">
-                  </div>
-                  <div class="ts-team-content">
-                    <h3 class="ts-name">Ayesha Stewart</h3>
-                    <p class="ts-designation">Finance Officer</p>
-                    <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
-                    <div class="team-social-icons">
-                      <a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
-                      <a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
-                      <a target="_blank" href="#"><i class="fab fa-google-plus"></i></a>
-                      <a target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="ts-team-wrapper">
-                  <div class="team-img-wrapper">
-                    <img loading="lazy" class="w-100" src="images/team/team5.jpg" alt="team-img">
-                  </div>
-                  <div class="ts-team-content">
-                    <h3 class="ts-name">Dave Clarkte</h3>
-                    <p class="ts-designation">Civil Engineer</p>
-                    <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
-                    <div class="team-social-icons">
-                      <a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
-                      <a target="_blank" href="#"><i class="fab fa-google-plus"></i></a>
-                      <a target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="item">
-                <div class="ts-team-wrapper">
-                  <div class="team-img-wrapper">
-                    <img loading="lazy" class="w-100" src="images/team/team6.jpg" alt="team-img">
-                  </div>
-                  <div class="ts-team-content">
-                    <h3 class="ts-name">Elton Joe</h3>
-                    <p class="ts-designation">Site Supervisor</p>
-                    <p class="ts-description">Nats Stenman began his career in construction with boots on the ground</p>
-                    <div class="team-social-icons">
-                      <a target="_blank" href="#"><i class="fab fa-facebook-f"></i></a>
                       <a target="_blank" href="#"><i class="fab fa-twitter"></i></a>
                       <a target="_blank" href="#"><i class="fab fa-google-plus"></i></a>
                       <a target="_blank" href="#"><i class="fab fa-linkedin"></i></a>
