--- a/contact.html
+++ b/contact.html
@@ -157,12 +157,11 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="banner-heading">
-                <h1 class="banner-title">Contact</h1>
+                <h1 class="banner-title">Bizimle İletişime Geçin</h1>
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb justify-content-center">
-                    <li class="breadcrumb-item"><a href="#">Home</a></li>
-                    <li class="breadcrumb-item"><a href="#">Company</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Contact Us</li>
+                    <li class="breadcrumb-item"><a href="index.html">Anasayfa</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">İletişim</li>
                   </ol>
                 </nav>
               </div>
@@ -186,8 +185,9 @@
                 <i class="fas fa-map-marker-alt mr-0"></i>
               </span>
               <div class="ts-service-box-content">
-                <h4>Visit Our Office</h4>
-                <p>9051 Constra Incorporate, USA</p>
+                <h4>Ofisimiz</h4>
+                <p><a onMouseOver="this.style.color='#FFF'" href="https://goo.gl/maps/qXXeDv6Py2ciqvR3A" target="_blank">Şeker Mah. İsmail
+                  Beliğ sk. No:3/C Selçuklu/KONYA</a></p>
               </div>
             </div>
           </div>
@@ -197,8 +197,8 @@
                 <i class="fa fa-envelope mr-0"></i>
               </span>
               <div class="ts-service-box-content">
-                <h4>Email Us</h4>
-                <p>office@Constra.com</p>
+                <h4>Mail Adresimiz</h4>
+                <p>iletisim@mecraproje.com</p>
               </div>
             </div>
           </div>
@@ -208,7 +208,7 @@
                 <i class="fa fa-phone-square mr-0"></i>
               </span>
               <div class="ts-service-box-content">
-                <h4>Call Us</h4>
+                <h4>Bizi Arayın</h4>
                 <p>(+9) 847-291-4353</p>
               </div>
             </div>
@@ -216,49 +216,9 @@
         </div>
         <div class="gap-60"></div>
         <div class="google-map">
-          <div id="map" class="map" data-latitude="40.712776" data-longitude="-74.005974"
-            data-marker="images/marker.png" data-marker-name="Constra"></div>
+            <iframe id="map" class="map" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12596.916538230864!2d32.4794487!3d37.8783238!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6feb66c41a07ba69!2sMECRA%20Proje!5e0!3m2!1str!2str!4v1655610875529!5m2!1str!2str" width="1110" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
         <div class="gap-40"></div>
-        <div class="row">
-          <div class="col-md-12">
-            <h3 class="column-title">We love to hear</h3>
-            <form id="contact-form" action="#" method="post" role="form">
-              <div class="error-container"></div>
-              <div class="row">
-                <div class="col-md-4">
-                  <div class="form-group">
-                    <label>Name</label>
-                    <input class="form-control form-control-name" name="name" id="name" placeholder="" type="text"
-                      required>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="form-group">
-                    <label>Email</label>
-                    <input class="form-control form-control-email" name="email" id="email" placeholder="" type="email"
-                      required>
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="form-group">
-                    <label>Subject</label>
-                    <input class="form-control form-control-subject" name="subject" id="subject" placeholder=""
-                      required>
-                  </div>
-                </div>
-              </div>
-              <div class="form-group">
-                <label>Message</label>
-                <textarea class="form-control form-control-message" name="message" id="message" placeholder="" rows="10"
-                  required></textarea>
-              </div>
-              <div class="text-right"><br>
-                <button class="btn btn-primary solid blank" type="submit">Send Message</button>
-              </div>
-            </form>
-          </div>
-        </div>
       </div>
     </section>
     <footer id="footer" class="footer bg-overlay">
