--- a/contact.html
+++ b/contact.html
@@ -133,13 +133,8 @@
                         <li><a href="service-single.html">Hizmet Detay Sayfası</a></li>
                       </ul>
                     </li>
-                    <li class="nav-item dropdown">
-                      <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Şirketimizden Haberler <i
-                          class="fa fa-angle-down"></i></a>
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="news-right-sidebar.html">News Right Sidebar</a></li>
-                        <li><a href="news-single.html">News Single</a></li>
-                      </ul>
+                    <li class="nav-item">
+                      <a href="news.html" class="nav-link">Şirketimizden Haberler</a>
                     </li>
                     <li class="nav-item active"><a class="nav-link active" href="contact.html">İletişim</a></li>
                   </ul>
