--- a/projects.html
+++ b/projects.html
@@ -125,13 +125,8 @@
                         <li><a href="projects-single.html">Proje Detay Sayfası</a></li>
                       </ul>
                     </li>
-                    <li class="nav-item dropdown">
-                      <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Hizmetlerimiz <i
-                          class="fa fa-angle-down"></i></a>
-                      <ul class="dropdown-menu" role="menu">
-                        <li><a href="services.html">Hizmetlerimiz</a></li>
-                        <li><a href="service-single.html">Hizmet Detay Sayfası</a></li>
-                      </ul>
+                    <li class="nav-item">
+                      <a href="services.html" class="nav-link">Hizmetlerimiz</a>
                     </li>
                     <li class="nav-item">
                       <a href="news.html" class="nav-link">Şirketimizden Haberler</a>
